--- a/styles/privacy/privacy.css
+++ b/styles/privacy/privacy.css
@@ -81,7 +81,7 @@
 }
 
 .sub-head {
-  margin-bottom: 10px;
+  margin-bottom: 14px;
   color: #595959;
 }
 
@@ -182,6 +182,10 @@
   .right_side {
     display: none !important;
   }
+}
+
+.footer_social_media1 {
+  display: none;
 }
 
 @media screen and (max-width: 768px) {
