--- a/styles/privacy/privacy.scss
+++ b/styles/privacy/privacy.scss
@@ -62,7 +62,7 @@
     color: #595959;
 }
 .sub-head{
-    margin-bottom: 10px;
+    margin-bottom: 14px;
     color: #595959;
 }
 .class_1 {
@@ -159,6 +159,9 @@
     .right_side {
         display: none !important;
     }}
+    .footer_social_media1 {
+        display: none;
+    }
 @media screen and (max-width: 768px) {
     .right_side {
         margin-left: 0px;
