--- a/styles/privacy_/policy/GDPR.css
+++ b/styles/privacy_/policy/GDPR.css
@@ -38,9 +38,10 @@
   width: 100%;
   color: black;
   display: block;
-  padding: 10px 28px;
+  padding: 10px 22px;
   border-bottom: 1px solid #6c757d1f;
   text-align: left;
+  color: #595959;
 }
 
 .dropdown #glossary:hover {
@@ -52,9 +53,10 @@
   width: 100%;
   color: black;
   display: block;
-  padding: 10px 29px;
+  padding: 10px 22px;
   border-bottom: 1px solid #6c757d1f;
   text-align: left;
+  color: #595959;
 }
 
 .dropdown #blog:hover {
@@ -236,6 +238,10 @@
   .right_side {
     display: none !important;
   }
+}
+
+.footer_social_media1 {
+  display: none;
 }
 
 @media screen and (max-width: 768px) {
