--- a/styles/privacy/privacy.css
+++ b/styles/privacy/privacy.css
@@ -2,6 +2,34 @@
   width: unset;
 }
 
+.response-xs {
+  display: -webkit-box !important;
+  display: -ms-flexbox !important;
+  display: flex !important;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  width: 100%;
+  margin: auto;
+}
+
+.privacy-gdpr {
+  display: none !important;
+}
+
+.privacy {
+  padding-left: 0px !important;
+  padding-right: 0px !important;
+}
+
+.pri:hover {
+  color: #665cd7 !important;
+}
+
+.pri1 {
+  color: #665cd7 !important;
+}
+
 .card1 {
   margin-top: 4%;
   width: 100% !important;
@@ -189,6 +217,29 @@
 }
 
 @media screen and (max-width: 768px) {
+  .response-xs {
+    display: -webkit-box !important;
+    display: -ms-flexbox !important;
+    display: flex !important;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    width: 100%;
+    margin: auto;
+  }
+  .privacy-gdpr {
+    display: none !important;
+  }
+  .privacy {
+    padding-left: 0px !important;
+    padding-right: 0px !important;
+  }
+  .pri:hover {
+    color: #665cd7 !important;
+  }
+  .pri1 {
+    color: #665cd7 !important;
+  }
   .right_side {
     margin-left: 0px;
   }
