--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,6 +3,10 @@ body {
   overflow-x: hidden !important;
 }
 
+.pri:hover {
+  color: #665cd7 !important;
+}
+
 .wrapper {
   width: 100%;
   height: 100%;
@@ -3711,6 +3715,10 @@ body {
   }
 }
 
+.pri:hover {
+  color: #665cd7;
+}
+
 .modal .modal-confirm {
   color: #434e65;
   width: 525px;
@@ -3827,5 +3835,31 @@ body {
 .social_icon_link {
   padding-left: 0px !important;
   padding-right: 0px !important;
+}
+
+@media only screen and (max-width: 426px) {
+  .response-xs {
+    display: -webkit-box !important;
+    display: -ms-flexbox !important;
+    display: flex !important;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    width: 100%;
+    margin: auto;
+  }
+  .privacy-gdpr {
+    display: none !important;
+  }
+  .privacy {
+    padding-left: 0px !important;
+    padding-right: 0px !important;
+    width: 40% !important;
+  }
+  .gdpr {
+    padding-left: 5px !important;
+    padding-right: 0px !important;
+    width: 40% !important;
+  }
 }
 /*# sourceMappingURL=styles.css.map */
