--- a/styles/privacy/privacy.css
+++ b/styles/privacy/privacy.css
@@ -196,6 +196,16 @@
 }
 
 @media screen and (max-width: 427px) {
+  .response-xs {
+    display: -webkit-box !important;
+    display: -ms-flexbox !important;
+    display: flex !important;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    width: 100%;
+    margin: 0px auto;
+  }
   .right_side {
     display: none !important;
   }
@@ -206,19 +216,6 @@
 }
 
 @media screen and (max-width: 768px) {
-  .response-xs {
-    display: -webkit-box !important;
-    display: -ms-flexbox !important;
-    display: flex !important;
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
-    width: 100%;
-    margin: auto;
-  }
-  .privacy-gdpr {
-    display: none !important;
-  }
   .privacy {
     padding-left: 0px !important;
     padding-right: 0px !important;
