--- a/styles/privacy_/policy/GDPR.scss
+++ b/styles/privacy_/policy/GDPR.scss
@@ -2,6 +2,7 @@
     width: unset;
 }
 .para-list{
+
     margin-bottom: 20px;
 }
 .resources{
@@ -14,13 +15,14 @@
     width: 100%;
     margin: auto;
 }
-.privacy-gdpr{
-    display: none !important;
-}
+
 .privacy{
     padding-left: 12px !important;
     padding-right: 0px !important;
    
+}
+.c{
+    color: #595959
 }
 .response-xs{
     display: none !important;
@@ -39,6 +41,9 @@
         display: block;
     }
     
+}
+.footer_social_media1{
+    display: block !important;
 }
 .dropdown{
     display: none;
@@ -217,6 +222,13 @@
 .linksz:hover{
     color:#6450f0;
 }
+.privacy-gdpr{
+     .gdpr{
+         p{
+             padding-left: 14px;
+         }
+     } 
+}
 @media screen and (max-width: 427px) {
     .right_side {
         display: none !important;
@@ -270,9 +282,19 @@
                 display: none !important;
             }
             .privacy{
-                padding-left: 5px !important;
+                
                 padding-right: 0px !important;
                
+            }
+        }
+        @media only screen and (min-width: 1100px){
+            .privacy{
+                p{
+                    padding-right: 30px !important;
+                }
+           
+                
+             
             }
         }
           
