--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1459,6 +1459,7 @@ body{
 .footer_social_media {
     border-top: 1px solid rgba(25, 34, 79, 0.08);
     padding: 12px 0px;
+
     .row{
         display: flex;
         flex-wrap: wrap;
@@ -4008,12 +4009,22 @@ h4 {
     }
     .privacy{
         padding-left: 0px !important;
-        padding-right: 0px !important;
-        width: 40% !important;
+        padding-right: 10px !important;
+        width: 20% !important;
     }
     .gdpr{
         padding-left: 5px !important;
         padding-right: 0px !important;
         width: 40% !important;
+    }
+}
+@media only screen and (min-width: 1100px){
+    .privacy{
+        p{
+            padding-right: 30px !important;
+        }
+   
+        
+     
     }
 }
