--- a/styles/ebookstyles/ebook.scss
+++ b/styles/ebookstyles/ebook.scss
@@ -588,6 +588,7 @@
     }
     .l{
         margin:auto 0px !important ;
+        display: block !important;
     }
 }
 @media only screen and (max-width: 374px) {
