--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1304,7 +1304,6 @@ body {
 .crayond_ceo {
   background-color: #FFE953;
   padding: 6% 0;
-  margin: 6% 0px;
 }
 
 .crayond_ceo .about-crayond {
@@ -1361,6 +1360,53 @@ body {
   margin: 0 0 0 auto;
   width: 400px;
   height: auto;
+}
+
+.quick_facts {
+  padding: 75px 0px;
+  background-color: whitesmoke;
+}
+
+.quick_facts .facts_head {
+  color: #6455c2;
+  font-size: 32px;
+  text-align: center;
+}
+
+.quick_facts h3 {
+  font-size: 42px;
+  text-align: center;
+}
+
+.quick_facts h4 {
+  font-size: 32px;
+  font-weight: 500 !important;
+  text-align: center;
+}
+
+.quick_facts .facts-para {
+  font-weight: 500;
+  color: #595959;
+  font-size: 20px;
+  line-height: 33px;
+  width: 50%;
+  margin: auto;
+}
+
+.quick_facts .containers {
+  width: 60%;
+  margin: 25px auto;
+  padding-top: 20px;
+  padding-bottom: 10px;
+  background-color: #fdfdfdab;
+  border-radius: 20px;
+  -webkit-box-shadow: 0px 15px;
+          box-shadow: 0px 15px;
+}
+
+.quick_facts .containers .card-subhead {
+  font-size: 20px;
+  color: #adadad;
 }
 
 .next_billion {
@@ -3027,6 +3073,11 @@ body {
   .header_text .banner_text_1 {
     font-size: 2rem !important;
   }
+  .facts-para {
+    font-size: 18px !important;
+    width: 80% !important;
+    margin: auto;
+  }
 }
 
 @media only screen and (max-width: 767px) {
@@ -3838,6 +3889,10 @@ body {
 }
 
 @media only screen and (max-width: 426px) {
+  .facts-para {
+    width: 80% !important;
+    margin: auto;
+  }
   .response-xs {
     display: -webkit-box !important;
     display: -ms-flexbox !important;
