--- a/styles/ebookstyles/ebook.scss
+++ b/styles/ebookstyles/ebook.scss
@@ -9,12 +9,13 @@
            
             font-size: 24px;
             font-weight: 500;
-            margin: 25px auto;
+            // margin: 25px auto;
         }
         h1{
             color: #2c3550;
             line-height: 1.25;
-            
+            // margin-top: 25px;
+            padding-top: 75px;
             font-size: 56px;
             font-weight: 600;
         }
@@ -198,7 +199,7 @@
     border-bottom: 1px solid #dfdfdf;
 }
 .lists{
-       margin: 70px auto;
+       margin: 0px auto;
        line-height: 35px;
     li{
         margin: 13px auto;
@@ -252,7 +253,7 @@
         }    
     }
     .lists{
-        margin :35px auto !important;
+        margin :16px auto !important;
     }
     .sm{
         // padding-top: 20px !important;
@@ -369,7 +370,7 @@
         }
     }
     .lists{
-        margin: 40px auto;
+        margin: 0px auto;
         line-height: 30px;
         ul{
             padding-left: 10px;
@@ -469,6 +470,7 @@
             
             font-size: 35px;
             font-weight: 600;
+            padding-top: 40px;
         }
         .buttons{
             margin-top: 35px;
@@ -506,7 +508,7 @@
         padding-left: 50px !important;
     }
     .lists{
-        margin: 15px auto !important;
+        margin: 10px auto !important;
     }
     .ebook{
         margin-top: 12% !important;
