--- a/styles/ebookstyles/ebook.scss
+++ b/styles/ebookstyles/ebook.scss
@@ -15,7 +15,7 @@
             color: #2c3550;
             line-height: 1.25;
             // margin-top: 25px;
-            padding-top: 75px;
+            padding-top: 25px;
             font-size: 56px;
             font-weight: 600;
         }
@@ -257,7 +257,7 @@
     }
     .sm{
         // padding-top: 20px !important;
-        height: 500px !important;
+        height: auto !important;
     }
     .img2-response{
         height: 475px !important;
@@ -293,7 +293,7 @@
       }
       .sm{
         // padding-top: 20px !important;
-        height: 450px !important;
+        height: auto !important;
     }
     .img2-response{
         height: 425px !important;
@@ -601,7 +601,7 @@
         height: auto !important;
     }
     .sm{
-        height: 330px !important;
+        height: auto !important;
     }
     .ebook{
         margin-top: 18% !important;
