--- a/styles/ebookstyles/ebook.css
+++ b/styles/ebookstyles/ebook.css
@@ -269,7 +269,7 @@
     font-size: 14px !important;
   }
   .sm {
-    height: auto !important;
+    height: 500px !important;
   }
   .img2-response {
     height: 425px !important;
