--- a/styles/ebookstyles/ebook.scss
+++ b/styles/ebookstyles/ebook.scss
@@ -293,7 +293,7 @@
       }
       .sm{
         // padding-top: 20px !important;
-        height: auto !important;
+        height: 500px !important;
     }
     .img2-response{
         height: 425px !important;
