--- a/styles/ebookstyles/ebook.css
+++ b/styles/ebookstyles/ebook.css
@@ -6,7 +6,7 @@
 .ebook .ebook-content h4 {
   color: #656c81;
   line-height: 1.67;
-  font-size: 24px;
+  font-size: 25px;
   font-weight: 500;
 }
 
@@ -14,8 +14,8 @@
   color: #2c3550;
   line-height: 1.25;
   padding-top: 25px;
-  font-size: 56px;
-  font-weight: 600;
+  font-size: 62px;
+  font-weight: 800 !important;
 }
 
 .ebook .ebook-content .buttons {
@@ -23,9 +23,9 @@
 }
 
 .ebook .ebook-content .buttons .pdf {
-  border-radius: 15px;
-  font-size: 17px;
-  padding: 15px 35px;
+  border-radius: 10px;
+  font-size: 19px;
+  padding: 15px 24px;
   font-weight: 800 !important;
 }
 
@@ -33,8 +33,8 @@
   font-weight: 800 !important;
   background-color: #ffd84e;
   border-radius: 10px;
-  font-size: 17px;
-  padding: 15px 25px;
+  font-size: 19px;
+  padding: 15px 16px;
 }
 
 .reponse-img {
@@ -65,8 +65,13 @@
   left: 1px;
 }
 
+.right-bg {
+  z-index: 1;
+}
+
 .report {
-  margin-bottom: 50px;
+  margin-bottom: 120px;
+  margin-top: 140px;
 }
 
 .report h3 {
@@ -95,6 +100,10 @@
   width: 100% !important;
   outline: none;
   color: white;
+}
+
+.report .card .warning {
+  border: 1px solid red;
 }
 
 .report .card .download {
@@ -182,6 +191,7 @@
 }
 
 .footer-border {
+  padding-bottom: 34px;
   border-bottom: 1px solid #dfdfdf;
 }
 
