--- a/styles/ebookstyles/ebook.scss
+++ b/styles/ebookstyles/ebook.scss
@@ -7,7 +7,7 @@
             color:#656c81;
             line-height: 1.67;
            
-            font-size: 24px;
+            font-size: 25px;
             font-weight: 500;
             // margin: 25px auto;
         }
@@ -16,16 +16,16 @@
             line-height: 1.25;
             // margin-top: 25px;
             padding-top: 25px;
-            font-size: 56px;
-            font-weight: 600;
+            font-size: 62px;
+            font-weight: 800 !important;
         }
         .buttons{
             margin-top: 40px;
             .pdf{
-                border-radius: 15px;
-                font-size: 17px;
+                border-radius: 10px;
+                font-size: 19px;
                
-                padding: 15px 35px;
+                padding: 15px 24px;
                 font-weight: 800 !important;
                 // margin-right: 20px;
             }
@@ -33,8 +33,8 @@
                 font-weight: 800 !important;
                 background-color: #ffd84e;
                 border-radius: 10px;
-                font-size: 17px;
-                padding: 15px 25px;
+                font-size: 19px;
+                padding: 15px 16px;
             }
         }
     }    
@@ -59,15 +59,15 @@
     top: 350px;
     left: 1px;
 }
-// .right-bg{
+.right-bg{
 //     background-image: url("../../images/topleft-bg.png");
 //     background-position-y: -50%;
-   
-  
-// }
+z-index:1;
+}
 .report{
     
-    margin-bottom: 50px;
+    margin-bottom: 120px;
+    margin-top: 140px;
     h3{
             font-weight: 800;
             margin-bottom: 25px;
@@ -91,6 +91,10 @@
             width: 100% !important;
             outline: none;
             color: white;
+            
+        }
+        .warning{
+            border: 1px solid red;
         }
         .download{
             font-weight: 800;
@@ -106,6 +110,7 @@
 
 .li{
     list-style-type: none !important;
+    
 }
 .styled-checkbox {
     // position: absolute; // take it out of document flow
@@ -196,6 +201,7 @@
     }
 }
 .footer-border{
+    padding-bottom: 34px;
     border-bottom: 1px solid #dfdfdf;
 }
 .lists{
